@@ -279,7 +279,7 @@
 		<maven.resources.plugin>2.7</maven.resources.plugin>
 		<maven.site.plugin>3.3</maven.site.plugin>
 		<maven.source.plugin>2.2.1</maven.source.plugin>
-		<maven.surefire.plugin>2.14.1</maven.surefire.plugin>
+		<maven.surefire.plugin>3.0.0-M5</maven.surefire.plugin>
 		<maven.taglist.plugin>2.4</maven.taglist.plugin>
 		<maven.tomcat.plugin>2.0-beta-1</maven.tomcat.plugin>
 		<maven.versions.plugin>2.0</maven.versions.plugin>
@@ -297,14 +297,6 @@
 		<!-- Config locations -->
 		<checkstyle.ruleset.location>checkstyle.xml</checkstyle.ruleset.location>
 		<pmd.ruleset.location>http://apromore.googlecode.com/svn/trunk/Extras/Build-Tools/src/main/resources/pmd.xml</pmd.ruleset.location>
-		<surefire.jvm.args>-Xms512m -Xmx4048m -XX:MaxPermSize=1024m</surefire.jvm.args>
-
-		<!-- Testing Settings -->
-		<integration.test.package>itest</integration.test.package>
-		<integration.test.suffix>IntgTest.java</integration.test.suffix>
-		<unit.test.suffix>UnitTest.java</unit.test.suffix>
-		<endpoint.test.suffix>EndpointTest.java</endpoint.test.suffix>
-		<ignored.test.suffix>ManualTest.java</ignored.test.suffix>
 
 		<!-- Toggles to turn off checks -->
 		<checkstyle.skip>true</checkstyle.skip>
@@ -1316,12 +1308,6 @@
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>${maven.jar.plugin}</version>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-enforcer-plugin</artifactId>
 					<version>${maven.enforcer.plugin}</version>
 				</plugin>
@@ -1353,11 +1339,41 @@
 					<artifactId>maven-bundle-plugin</artifactId>
 					<version>${maven.bundle.plugin}</version>
 					<extensions>true</extensions>
+					<inherited>true</inherited>
+					<executions>
+						<execution>
+							<id>bundle-manifest</id>
+							<phase>process-classes</phase>
+							<goals>
+								<goal>manifest</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<archive>
+							<forced>true</forced>
+						</archive>
+						<niceManifest>true</niceManifest>
+						<supportedProjectTypes>
+							<supportedProjectType>bundle</supportedProjectType>
+							<supportedProjectType>war</supportedProjectType>
+						</supportedProjectTypes>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>3.2.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
 					<version>${maven.war.plugin}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>build-helper-maven-plugin</artifactId>
+					<version>3.2.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -1410,6 +1426,20 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>${maven.surefire.plugin}</version>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
 				<version>${maven.jxr.plugin}</version>
 				<configuration>
@@ -1433,35 +1463,10 @@
 					<printSummary>true</printSummary>
 					<runOrder>alphabetical</runOrder>
 					<failIfNoTests>false</failIfNoTests>
-					<argLine>${argLine} ${surefire.jvm.args}</argLine>
 					<includes>
-						<include>**/*${unit.test.suffix}</include>
-						<include>**/*${endpoint.test.suffix}</include>
+						<include>**/*UnitTest.java</include>
 					</includes>
-					<excludes>
-						<exclude>**/*${integration.test.suffix}</exclude>
-						<exclude>**/*${ignored.test.suffix}</exclude>
-					</excludes>
 				</configuration>
-				<executions>
-					<execution>
-						<id>integration-test</id>
-						<goals>
-							<goal>test</goal>
-						</goals>
-						<phase>integration-test</phase>
-						<configuration>
-							<excludes>
-								<exclude>**/*${ignored.test.suffix}</exclude>
-							</excludes>
-							<includes>
-								<include>**/${integration.test.package}/**/*Test.java</include>
-								<include>**/${integration.test.package}/**/*TestCase.java</include>
-								<include>**/*${integration.test.suffix}</include>
-							</includes>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -1625,43 +1630,6 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>${maven.bundle.plugin}</version>
-				<extensions>true</extensions>
-				<inherited>true</inherited>
-				<executions>
-					<execution>
-						<id>bundle-manifest</id>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>manifest</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<archive>
-						<forced>true</forced>
-					</archive>
-					<niceManifest>true</niceManifest>
-					<supportedProjectTypes>
-						<supportedProjectType>jar</supportedProjectType>
-						<supportedProjectType>bundle</supportedProjectType>
-						<supportedProjectType>war</supportedProjectType>
-					</supportedProjectTypes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>${maven.jar.plugin}</version>
-				<configuration>
-					<archive>
-						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-					</archive>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>${maven.war.plugin}</version>
@@ -1733,10 +1701,10 @@
 					<organizationName>The Apromore Initiative</organizationName>
 					<copyrightOwners>Apromore Pty Ltd.</copyrightOwners>
 					<projectName>This file is part of "Apromore Core".</projectName>
-					<failOnMissingHeader>true</failOnMissingHeader>
 					<canUpdateCopyright>true</canUpdateCopyright>
 					<!--<canUpdateDescription>true</canUpdateDescription> -->
 					<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+					<ignoreNoFileToScan>true</ignoreNoFileToScan>
 
 				</configuration>
 				<executions>
